--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Version 2.30.1
+~~~~~~~~~~~~~~
+Released: 2010-04-26
+
+* Translations
+ - Updated Italian translation (Francesco Groccia)
+ - Updated Polish translation (Piotr Drąg)
+
+* Bugfix:
+ - Do not explode when viewing the details of a CMYK profile (Richard Hughes)
+ - Make gcm-fix-profile open the profile from memory, as then we can catch
+   common access permission errors (Richard Hughes)
+
 Version 2.30.0
 ~~~~~~~~~~~~~~
 Released: 2010-03-29
