Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -3,12 +3,13 @@
 # Copyright (C) 2009 gnome-color-manager's COPYRIGHT HOLDER
 # This file is distributed under the same license as the gnome-color-manager package.
 # Jorge González <jorgegonz@svn.gnome.org>, 2009, 2010.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager.help.master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-24 12:39+0000\n"
-"PO-Revision-Date: 2010-03-27 13:56+0100\n"
+"POT-Creation-Date: 2010-05-06 21:53+0000\n"
+"PO-Revision-Date: 2010-05-10 23:22+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,76 +21,98 @@ msgstr ""
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:188(None)
-msgid "@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
+#| msgid ""
+#| "@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
+msgid "@@image: 'figures/gcm-import.png'; md5=d189ed327ebd94cbe2958a37d3466200"
 msgstr ""
-"@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
+"@@image: 'figures/gcm-import.png'; md5=d189ed327ebd94cbe2958a37d3466200"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:226(None)
-msgid "@@image: 'figures/gcm-basic.png'; md5=2341688974dc94a026330d66e2d2b193"
-msgstr "@@image: 'figures/gcm-basic.png'; md5=2341688974dc94a026330d66e2d2b193"
+#| msgid ""
+#| "@@image: 'figures/gcm-basic.png'; md5=2341688974dc94a026330d66e2d2b193"
+msgid "@@image: 'figures/gcm-basic.png'; md5=6b7faa5c9598d5b9e9cfadc725bd5e61"
+msgstr "@@image: 'figures/gcm-basic.png'; md5=6b7faa5c9598d5b9e9cfadc725bd5e61"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:285(None)
-msgid "@@image: 'figures/gcm-adjust.png'; md5=5cde9fc4e9d23b4b753ba5afceb12114"
+#| msgid ""
+#| "@@image: 'figures/gcm-adjust.png'; md5=5cde9fc4e9d23b4b753ba5afceb12114"
+msgid "@@image: 'figures/gcm-adjust.png'; md5=da058b39555e191e120e7d9c98705e76"
 msgstr ""
-"@@image: 'figures/gcm-adjust.png'; md5=5cde9fc4e9d23b4b753ba5afceb12114"
+"@@image: 'figures/gcm-adjust.png'; md5=da058b39555e191e120e7d9c98705e76"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:340(None)
+#| msgid ""
+#| "@@image: 'figures/gcm-scanner.png'; md5=7b634191ede46f7b7c7af2f987270c49"
 msgid ""
-"@@image: 'figures/gcm-scanner.png'; md5=7b634191ede46f7b7c7af2f987270c49"
+"@@image: 'figures/gcm-scanner.png'; md5=56aa2d37e8822f43cb18d36ac0b16462"
 msgstr ""
-"@@image: 'figures/gcm-scanner.png'; md5=7b634191ede46f7b7c7af2f987270c49"
+"@@image: 'figures/gcm-scanner.png'; md5=56aa2d37e8822f43cb18d36ac0b16462"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:364(None)
+#| msgid ""
+#| "@@image: 'figures/gcm-calibrate-default.png'; "
+#| "md5=21815551aae222d703032db710598b70"
 msgid ""
 "@@image: 'figures/gcm-calibrate-default.png'; "
-"md5=21815551aae222d703032db710598b70"
+"md5=7283123ce0de7e77abb61a0a93567db0"
 msgstr ""
 "@@image: 'figures/gcm-calibrate-default.png'; "
-"md5=21815551aae222d703032db710598b70"
+"md5=7283123ce0de7e77abb61a0a93567db0"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:376(None)
+#| msgid ""
+#| "@@image: 'figures/gcm-calibrate-drawing.png'; "
+#| "md5=8fcee7383b49c1d2fd487f5e9b6beb25"
 msgid ""
 "@@image: 'figures/gcm-calibrate-drawing.png'; "
-"md5=8fcee7383b49c1d2fd487f5e9b6beb25"
+"md5=16f5a9957a4f778d291d8553bafb84d6"
 msgstr ""
 "@@image: 'figures/gcm-calibrate-drawing.png'; "
-"md5=8fcee7383b49c1d2fd487f5e9b6beb25"
+"md5=16f5a9957a4f778d291d8553bafb84d6"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:395(None)
+#| msgid ""
+#| "@@image: 'figures/gcm-device-configure.png'; "
+#| "md5=b322b0ebc3ad1b7af4a80f71e7ec6b06"
 msgid ""
 "@@image: 'figures/gcm-device-configure.png'; "
-"md5=b322b0ebc3ad1b7af4a80f71e7ec6b06"
+"md5=09a36ef8349ba57ec3c20d51b42c0b30"
 msgstr ""
 "@@image: 'figures/gcm-device-configure.png'; "
-"md5=b322b0ebc3ad1b7af4a80f71e7ec6b06"
+"md5=09a36ef8349ba57ec3c20d51b42c0b30"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:412(None)
+#| msgid ""
+#| "@@image: 'figures/gcm-screen-type.png'; "
+#| "md5=1f87ec2557bf4890bc6906e030a505b2"
 msgid ""
-"@@image: 'figures/gcm-screen-type.png'; md5=1f87ec2557bf4890bc6906e030a505b2"
+"@@image: 'figures/gcm-screen-type.png'; md5=962a864273cb062bcef96ed10f3b0931"
 msgstr ""
-"@@image: 'figures/gcm-screen-type.png'; md5=1f87ec2557bf4890bc6906e030a505b2"
+"@@image: 'figures/gcm-screen-type.png'; md5=962a864273cb062bcef96ed10f3b0931"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:429(None)
+#| msgid ""
+#| "@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
 msgid ""
-"@@image: 'figures/gcm-print-mode.png'; md5=0b8a7747fedd33b22d38dd447e1dd902"
+"@@image: 'figures/gcm-print-mode.png'; md5=7b1ccf09329e097ba54c12ee009417b6"
 msgstr ""
-"@@image: 'figures/gcm-print-mode.png'; md5=0b8a7747fedd33b22d38dd447e1dd902"
+"@@image: 'figures/gcm-print-mode.png'; md5=7b1ccf09329e097ba54c12ee009417b6"
 
 #: C/gnome-color-manager.xml:25(title)
 msgid "<application>GNOME Color Manager</application> Manual"
@@ -918,6 +941,13 @@ msgstr ""
 #: C/gnome-color-manager.xml:0(None)
 msgid "translator-credits"
 msgstr "Jorge González <jorgegonz@svn.gnome.org>, 2009-2010"
+
+#~ msgid ""
+#~ "@@image: 'figures/gcm-print-mode.png'; "
+#~ "md5=0b8a7747fedd33b22d38dd447e1dd902"
+#~ msgstr ""
+#~ "@@image: 'figures/gcm-print-mode.png'; "
+#~ "md5=0b8a7747fedd33b22d38dd447e1dd902"
 
 #~ msgid "The monitor profile."
 #~ msgstr "El perfil del monitor."
