--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Version 2.30.2
+~~~~~~~~~~~~~~
+Released: 2010-06-01
+
+* Translations
+ - Added Japanese translation (Ryo Fujita)
+ - Updated British English translation (Bruce Cowan)
+
+* Bugfix:
+ - Do not connect to sane in gcm-apply, we only need XRandR devices. Fixes rh#585723 (Richard Hughes)
+ - Do not crash when the schema is invalid and GConf reports an error (Richard Hughes)
+ - Only connect to SANE and CUPS when the device lists are needed. Fixes rh#590465 (Richard Hughes)
+ - Get the profile permissions from GIO rather than hardcoding a hack (Richard Hughes)
+ - At login do not attempt to remove previously set X atoms, which speeds up gcm-apply by 750ms (Richard Hughes)
+
 Version 2.30.1
 ~~~~~~~~~~~~~~
 Released: 2010-04-26
